--- a/highscores.html
+++ b/highscores.html
@@ -16,6 +16,8 @@
       <a href="index.html"><button>Go Back</button></a>
       <button class="clear-scores">Clear Scores</button>
     </section>
-    
+
+
+    <script src="assets/js/highscores.js"></script>
   </body>
 </html>
