finishing up final touches

--- a/submit.html
+++ b/submit.html
@@ -25,7 +25,7 @@
             <label for="initials-saved">Initials</label>
         </section>
         <section>
-            <input type="name" class="form" id="initals-saved" placeholder="asd">
+            <input type="name" class="form" id="initals-saved" placeholder="player intials">
             <button type="submit" class="btn">Submit</button>
         </section>
         </form>
