--- a/highscores.html
+++ b/highscores.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <title>HighScores</title>
-  </head>
 
-  <body>
-    <h1 style="text-align: center">High Scores</h1>
+<head>
+  <meta charset="UTF-8" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <title>HighScores</title>
+</head>
 
-    <section class="scores-list" style="text-align: center"></section>
+<body>
+  <h1  class="highscores" style="text-align: center">High Scores</h1>
 
-    <section style="text-align: center">
-      <a href="index.html"><button>Go Back</button></a>
-      <button class="clear-scores">Clear Scores</button>
-    </section>
+  <section class="scores-list" style="text-align: center"></section>
 
+  <section style="text-align: center">
+    <a href="index.html"><button class="btn">Go Back</button></a>
+    <button class="clear-scores btn">Clear Scores</button>
+  </section>
 
-    <script src="assets/js/highscores.js"></script>
-  </body>
+  <script src="assets/js/highscores.js"></script>
+</body>
+
 </html>
