--- a/submit.html
+++ b/submit.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Submit Scores</title>
 </head>
+
 <body>
     <section class="header">
         <section class="high-scores">
@@ -17,19 +19,20 @@
         <section class="clock">Timer</section>
     </section>
 
-    <h2 style="text-align: center;">All done</h2>
-    <p class="scores" style="text-align: center;"></p>
+    <h2 style="text-align: center">All done</h2>
+    <p class="scores" style="text-align: center"></p>
     <section>
         <form class="highscores">
-        <section>
-            <label for="initials-saved">Initials</label>
-        </section>
-        <section>
-            <input type="name" class="form" id="initals-saved" placeholder="player intials">
-            <button type="submit" class="btn">Submit</button>
-        </section>
+            <section>
+                <label for="initials-saved">Initials</label>
+            </section>
+            <section>
+                <input type="name" class="form" id="initals-saved" placeholder="player intials" />
+                <button type="submit" class="btn">Submit</button>
+            </section>
         </form>
     </section>
     <script src="assets/js/submit.js"></script>
 </body>
+
 </html>
