final touches to css

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <header>
+    <container>
     <section class="header">
         <section class="high-score">
             <a href="highscores.html">View High Scores</a>
@@ -36,6 +37,7 @@
             <ol class="answer-buttons btn-grid"></ol>
         </section>
     </section>
+    </container>
 </header>
 
 <script src="assets/js/script.js"></script>
