--- a/submit.html
+++ b/submit.html
@@ -16,22 +16,21 @@
         <section class="high-scores">
             <a href="highscores.html">View High Scores</a>
         </section>
-        <section class="clock">Timer</section>
+        <section style="text-align:center" class="clock">Timer</section>
     </section>
-
-    <h2 style="text-align: center">All done</h2>
-    <p class="scores" style="text-align: center"></p>
+    <section>
+    <h2 class="done">All done</h2>
+    </section>
+    <p class="scores"></p>
     <section>
         <form class="highscores">
             <section>
-                <label for="initials-saved">Initials</label>
-            </section>
-            <section>
                 <input type="name" class="form" id="initals-saved" placeholder="player intials" />
-                <button type="submit" class="btn">Submit</button>
-            </section>
-        </form>
+            </section><br>
+            <button id="push" type="submit" class="btn push">Submit</button>
+         </form>
     </section>
+   
     <script src="assets/js/submit.js"></script>
 </body>
 
