--- a/highscores.html
+++ b/highscores.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <div class="high">
   <h1  class="highscores" style="text-align: center">High Scores</h1>
 
   <section class="scores-list" style="text-align: center"></section>
@@ -20,6 +21,7 @@
     <a href="index.html"><button class="btn">Go Back</button></a>
     <button class="clear-scores btn">Clear Scores</button>
   </section>
+  </div>
 
   <script src="assets/js/highscores.js"></script>
 </body>
